--- a/home/seed.config
+++ b/home/seed.config
@@ -33,11 +33,13 @@ CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
+CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_byobu=y
 CONFIG_PACKAGE_byobu-utils=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_cgi-io=y
+CONFIG_PACKAGE_containerd=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_curl=y
@@ -56,6 +58,7 @@ CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
 CONFIG_PACKAGE_docker=y
 CONFIG_PACKAGE_docker-compose=y
+CONFIG_PACKAGE_dockerd=y
 CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_hysteria=y
@@ -63,33 +66,57 @@ CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_kcptun-client=y
 CONFIG_PACKAGE_kcptun-config=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-crypto-acompress=y
+CONFIG_PACKAGE_kmod-crypto-aead=y
+CONFIG_PACKAGE_kmod-crypto-crc32c=y
 CONFIG_PACKAGE_kmod-crypto-hash=y
 CONFIG_PACKAGE_kmod-crypto-kpp=y
 CONFIG_PACKAGE_kmod-crypto-lib-chacha20=y
 CONFIG_PACKAGE_kmod-crypto-lib-chacha20poly1305=y
 CONFIG_PACKAGE_kmod-crypto-lib-curve25519=y
 CONFIG_PACKAGE_kmod-crypto-lib-poly1305=y
+CONFIG_PACKAGE_kmod-crypto-manager=y
+CONFIG_PACKAGE_kmod-crypto-null=y
+CONFIG_PACKAGE_kmod-crypto-pcompress=y
+CONFIG_PACKAGE_kmod-dax=y
+CONFIG_PACKAGE_kmod-dm=y
+CONFIG_PACKAGE_kmod-fs-btrfs=y
+CONFIG_PACKAGE_kmod-ikconfig=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-ipset=y
 CONFIG_PACKAGE_kmod-ipt-raw=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
+CONFIG_PACKAGE_kmod-lib-crc32c=y
+CONFIG_PACKAGE_kmod-lib-lzo=y
+CONFIG_PACKAGE_kmod-lib-raid6=y
+CONFIG_PACKAGE_kmod-lib-xor=y
+CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
+CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
+CONFIG_PACKAGE_kmod-lib-zstd=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-nfnetlink=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-udptunnel4=y
 CONFIG_PACKAGE_kmod-udptunnel6=y
+CONFIG_PACKAGE_kmod-veth=y
 CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-ng=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libdb47=y
+CONFIG_PACKAGE_libdevmapper=y
 CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevent2=y
@@ -105,6 +132,7 @@ CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblzma=y
+CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libmaxminddb=y
 CONFIG_PACKAGE_libmbedtls=y
 CONFIG_PACKAGE_libmnl=y
@@ -112,6 +140,7 @@ CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnettle=y
+CONFIG_PACKAGE_libnetwork=y
 CONFIG_PACKAGE_libnewt=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnghttp2=y
@@ -121,6 +150,7 @@ CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libpython3=y
 CONFIG_PACKAGE_libqrencode=y
 CONFIG_PACKAGE_libreadline=y
+CONFIG_PACKAGE_libseccomp=y
 CONFIG_PACKAGE_libslang2=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libsqlite3=y
@@ -258,6 +288,7 @@ CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
+CONFIG_PACKAGE_runc=y
 CONFIG_PACKAGE_shadowsocks-libev-config=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
@@ -269,6 +300,7 @@ CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_tini=y
 CONFIG_PACKAGE_tmux=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
