--- a/xiaomi-redmi-ac2100/seed.config
+++ b/xiaomi-redmi-ac2100/seed.config
@@ -15,16 +15,6 @@ CONFIG_LIBCURL_PROXY=y
 CONFIG_LIBCURL_WOLFSSL=y
 CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_LUCI_SRCDIET=y
-CONFIG_OPENSSL_ENGINE=y
-CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM=y
-CONFIG_OPENSSL_WITH_ASM=y
-CONFIG_OPENSSL_WITH_CHACHA_POLY1305=y
-CONFIG_OPENSSL_WITH_CMS=y
-CONFIG_OPENSSL_WITH_DEPRECATED=y
-CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
-CONFIG_OPENSSL_WITH_PSK=y
-CONFIG_OPENSSL_WITH_SRP=y
-CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_PACKAGE_batctl-default=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_curl=y
@@ -61,7 +51,6 @@ CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnettle=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnghttp2=y
-CONFIG_PACKAGE_libopenssl=m
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_lua=y
@@ -98,6 +87,7 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_umdns=y
-CONFIG_PACKAGE_wpad-openssl=y
+# CONFIG_PACKAGE_wpad-basic-wolfssl is not set
+CONFIG_PACKAGE_wpad-mesh-wolfssl=y
 CONFIG_PACKAGE_zoneinfo-asia=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
